[tool.poetry]
name = "unlv-cyber-2022-summer"
version = "0.1.0"
description = ""
authors = ["Michael Lazeroff <michaeldlazeroff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^8.3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
